Starting 2nd section of history

--- a/content/getting-started/1700s-to-Early-1900s.html
+++ b/content/getting-started/1700s-to-Early-1900s.html
@@ -48,13 +48,28 @@ system due to the increased accessibility.</p>
 <p>Before people could buy individual parts for machinery, everything was put
 together under one person. Thanks to the efforts of Eli Whitney and Simeon
 North, individual parts could be mass-produced to specifications for any
-finished product <span class="citation">(<a href="#ref-maynard_zandin_2001" role="doc-biblioref">Maynard and Zandin 2001</a>)</span>. Frederick W. Taylor on the other hand,
-wanted to find out “the best way to do a job” <span class="citation">(<a href="#ref-gass_assad_2005" role="doc-biblioref">Gass and Assad 2005</a>)</span>. Under his
-system, he focused on removing wasteful movements of each component within the
-production process. As a result, work efficiency improved tremendously, time
-spent on tasks were reduced, and work measurement standards were developed.
-In a way, Taylor accomplished the same goal with work as Whitney did with
-parts.</p>
+finished product <span class="citation">(<a href="#ref-maynard_zandin_2001" role="doc-biblioref">Maynard and Zandin 2001</a>)</span>. If interchangeability didn’t exist,
+you’d have to go to same craftsman for fixes who may or may not be readily
+available. Frederick W. Taylor on the other hand, wanted to find out “the best
+way to do a job” <span class="citation">(<a href="#ref-gass_assad_2005" role="doc-biblioref">Gass and Assad 2005</a>)</span>. Under his system, he focused on removing
+wasteful movements of each component within the production process. As a result,
+work efficiency improved tremendously, time spent on tasks were reduced, and
+work measurement standards were developed. In a way, Taylor accomplished the
+same goal with work as Whitney did with parts.</p>
+</div>
+<div id="project-planning" class="section level2">
+<h2>Project Planning</h2>
+<p>For those who have worked on any project(s) in any environment, you probably
+have seen bar charts that displays the project schedule. Gannt charts, invented
+by Henry L. Grantt, proposed them to be used to represent the precedence
+relationship between tasks, completion schedules, and tracking performance.
+Its commonly used with in the construction industry with the numerous steps
+necessary before moving on to the next phases of construction (i.e. need walls
+and a floor before you can build a roof).</p>
+<div class="figure">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/GanttChartAnatomy.svg/330px-GanttChartAnatomy.svg.png" alt="" />
+<p class="caption">A Gantt Chart. Source: Wikipedia</p>
+</div>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
