--- a/content/getting-started/WWI-to-WWII-era.html
+++ b/content/getting-started/WWI-to-WWII-era.html
@@ -9,3 +9,8 @@ weight: 20
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<div id="military-origins-of-operations-research" class="section level1">
+<h1>Military Origins of Operations Research</h1>
+<p>Aside from technological inventions, industrial engineering didn’t stand out as
+much as operations research did.</p>
+</div>
