Remove repeated word in WWI-WWII subsection

--- a/content/getting-started/1950s-to-Today.html
+++ b/content/getting-started/1950s-to-Today.html
@@ -11,10 +11,10 @@ bibliography: references.bib
 
 <div id="functions-of-industrial-engineering-and-operations-research-professionals" class="section level2">
 <h2>Functions of Industrial Engineering and Operations Research Professionals</h2>
-<p>As the 70s and 80s approached, industrial engineering as a field became more
-generalized with more quantitative techniques and computers being introduced,
-there was little difference between industrial engineering and operations
-research <span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref">Holsten 1999</a>)</span>.</p>
+<p>As the 70s and 80s approached, industrial engineering began to lose its identity
+with more quantitative techniques and computers being introduced, there was
+little difference between industrial engineering and operations research
+<span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref">Holsten 1999</a>)</span>.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
