--- a/content/getting-started/WWI-to-WWII-era.html
+++ b/content/getting-started/WWI-to-WWII-era.html
@@ -32,10 +32,11 @@ physicist, redeployed the convoy system from WWI and tested the UK’s new radar
 capabilities with great success. The U.S. Air Force eventually decided to have
 their own operations research groups for wargaming purposes. After WWII,
 mathematician George B. Dantzig developed the linear programming formulation
-(Leonid Vitalievich Kantorovich from the USSR came up with it although
-his work wasn’t popular among USSR economists) <span class="citation">(<a href="#ref-matlab_2020" role="doc-biblioref">MATLAB 2020</a>)</span>. Operations
-research become widespread in the US private sector where over half of US
-companies used it at some function <span class="citation">(<a href="#ref-holsten_1998" role="doc-biblioref">Holsten 1998</a>)</span>.</p>
+for the Air Force to optimize planning costs (Leonid Vitalievich Kantorovich
+from the USSR came up with it earlier although his work wasn’t popular among
+USSR economists) <span class="citation">(<a href="#ref-matlab_2020" role="doc-biblioref">MATLAB 2020</a>)</span>. Operations research become widespread in the US
+private sector where over half of US companies used it at some function
+<span class="citation">(<a href="#ref-holsten_1998" role="doc-biblioref">Holsten 1998</a>)</span>.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
