--- a/content/getting-started/1950s-to-Today.html
+++ b/content/getting-started/1950s-to-Today.html
@@ -11,10 +11,26 @@ bibliography: references.bib
 
 <div id="functions-of-industrial-engineering-and-operations-research-professionals" class="section level2">
 <h2>Functions of Industrial Engineering and Operations Research Professionals</h2>
-<p>As the 70s and 80s approached, industrial engineering began to lose its identity
-with more quantitative techniques and computers being introduced, there was
-little difference between industrial engineering and operations research
-<span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref">Holsten 1999</a>)</span>.</p>
+<p>As the 70s and 80s approached, some talks claimed that industrial engineering was
+losing its identity with more quantitative techniques and computers being
+introduced. Yet the differences between industrial engineering and operations
+research couldn’t get any more distinct <span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref">Holsten 1999</a>)</span>. If we were to look at
+the BLS and compare occupations:</p>
+<hr />
+<p><strong>Industrial Engineers</strong></p>
+<p>“Industrial engineers devise efficient systems that integrate workers, machines,
+materials, information, and energy to make a product or provide a service.”</p>
+<p><strong>Operations Research Analyst</strong></p>
+<p>“Operations research analysts use advanced mathematical and analytical methods
+to help solve complex issues.”</p>
+<hr />
+<p>Industrial engineering is more domain-focused (manufacturing in particular) on
+<strong>optimizing processes.</strong> Operations research focuses on <strong>how to optimize</strong>
+resources at hand to achieve an organizational goal. You’ll see the skillsets of
+industrial engineers involve quality control, improving production flow, and
+time/cost reduction. While operations research analysts are involved in some of
+those processes, they are not normally the main decision makers despite helping
+in the decision-making process.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
