--- a/content/getting-started/1950s-to-Today.html
+++ b/content/getting-started/1950s-to-Today.html
@@ -25,18 +25,22 @@ materials, information, and energy to make a product or provide a service.”</p
 to help solve complex issues.”</p>
 <hr />
 <p>Industrial engineering is more domain-focused (manufacturing in particular) on
-<strong>optimizing processes.</strong> Operations research focuses on <strong>how to optimize</strong>
-resources at hand to achieve an organizational goal. You’ll see the skillsets of
-industrial engineers involve quality control, improving production flow, and
-time/cost reduction. While operations research analysts are involved in some of
-those processes, they are not normally the main decision makers despite helping
-in the decision-making process.</p>
+<strong>optimizing processes, ergonomics, design, material handling,</strong> and more <span class="citation">(<a href="#ref-maynard_zandin_2001" role="doc-biblioref">Maynard and Zandin 2001</a>)</span>.
+Operations research focuses on <strong>how to optimize</strong> resources at hand to achieve
+an organizational goal. You’ll see the skillsets of industrial engineers involve
+quality control, improving production flow, and time/cost reduction. While
+operations research analysts are involved in some of those processes, they are
+not normally the key decision makers despite helping in that
+decision-making process.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div id="ref-holsten_1999" class="csl-entry">
 Holsten, William K. 1999. <span>“Industrial Engineering.”</span> <em>Encyclopedia Britannica</em>. Encyclopedia Britannica, inc. <a href="https://www.britannica.com/technology/industrial-engineering">https://www.britannica.com/technology/industrial-engineering</a>.
+</div>
+<div id="ref-maynard_zandin_2001" class="csl-entry">
+Maynard, Harold B., and Kjell B. Zandin. 2001. <em>Maynard’s Industrial Engineering Handbook</em>. McGraw-Hill.
 </div>
 </div>
 </div>
