--- a/content/getting-started/1950s-to-Today.html
+++ b/content/getting-started/1950s-to-Today.html
@@ -14,7 +14,7 @@ bibliography: references.bib
 <p>As the 70s and 80s approached, some talks claimed that industrial engineering was
 losing its identity with more quantitative techniques and computers being
 introduced. Yet the differences between industrial engineering and operations
-research couldn’t get any more distinct <span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref">Holsten 1999</a>)</span>. If we were to look at
+research couldn’t get any more distinct <span class="citation">(<a href="#ref-holsten_1999" role="doc-biblioref"><strong>holsten_1999?</strong></a>)</span>. If we were to look at
 the BLS and compare occupations:</p>
 <hr />
 <p><strong>Industrial Engineers</strong></p>
@@ -24,21 +24,18 @@ materials, information, and energy to make a product or provide a service.”</p
 <p>“Operations research analysts use advanced mathematical and analytical methods
 to help solve complex issues.”</p>
 <hr />
-<p>Industrial engineering is more domain-focused (manufacturing in particular) on
-<strong>optimizing processes, ergonomics, design, material handling,</strong> and more <span class="citation">(<a href="#ref-maynard_zandin_2001" role="doc-biblioref">Maynard and Zandin 2001</a>)</span>.
+<p>Industrial engineering specializes in manufacturing and production in particular
+for process improvement <span class="citation">(<a href="#ref-maynard_zandin_2001" role="doc-biblioref">Maynard and Zandin 2001</a>)</span>. Methodology includes lean
+manufacturing, six sigma, and just-in-time (JIT) manufacturing. The latter may
+eventually be phased out due to COVID causing supply shocks especially in ports.
 Operations research focuses on <strong>how to optimize</strong> resources at hand to achieve
-an organizational goal. You’ll see the skillsets of industrial engineers involve
-quality control, improving production flow, and time/cost reduction. While
-operations research analysts are involved in some of those processes, they are
-not normally the key decision makers despite helping in that
+an organizational goal. While operations research analysts are involved in some
+of those processes, they are not directly involved despite helping in that
 decision-making process.</p>
 </div>
 <div id="references" class="section level2 unnumbered">
 <h2>References</h2>
 <div id="refs" class="references csl-bib-body hanging-indent">
-<div id="ref-holsten_1999" class="csl-entry">
-Holsten, William K. 1999. <span>“Industrial Engineering.”</span> <em>Encyclopedia Britannica</em>. Encyclopedia Britannica, inc. <a href="https://www.britannica.com/technology/industrial-engineering">https://www.britannica.com/technology/industrial-engineering</a>.
-</div>
 <div id="ref-maynard_zandin_2001" class="csl-entry">
 Maynard, Harold B., and Kjell B. Zandin. 2001. <em>Maynard’s Industrial Engineering Handbook</em>. McGraw-Hill.
 </div>
