--- a/content/getting-started/WWI-to-WWII-era.html
+++ b/content/getting-started/WWI-to-WWII-era.html
@@ -20,35 +20,24 @@ based on ship size, speed, and deployment timing. The US didn’t get involved
 in WWI until roughly 2 years after the RMS Lusitania sinking incident. As a
 result, US ships escorted those convoys while participating in submarine hunting.
 The combined forces of optimized British convoys and US naval ships allowed
-British convoy fatality rates to drop from 10% to 0.5% <span class="citation">(<a href="#ref-theorsocietyuk_2017" role="doc-biblioref">TheORSocietyUK 2017</a>)</span>.</p>
+British convoy fatality rates to drop from 10% to 0.5% <span class="citation">(<a href="#ref-theorsocietyuk_2017" role="doc-biblioref"><strong>theorsocietyuk_2017?</strong></a>)</span>.</p>
 </div>
 <div id="operations-research-in-wwii" class="section level2">
 <h2>Operations Research in WWII</h2>
 <p>After WWI, operations research gained more prominence through the development
 of radar. A.P. Rowe’s and Robert Watson-Watt’s breakthrough alongside the
 assistance of Royal Air Force officers improved the UK’s air defense
-capabilities by 20-fold <span class="citation">(<a href="#ref-theorsocietyuk_2017" role="doc-biblioref">TheORSocietyUK 2017</a>)</span>. Patrick Blackett, a British
+capabilities by 20-fold <span class="citation">(<a href="#ref-theorsocietyuk_2017" role="doc-biblioref"><strong>theorsocietyuk_2017?</strong></a>)</span>. Patrick Blackett, a British
 physicist, redeployed the convoy system from WWI and tested the UK’s new radar
 capabilities with great success. The U.S. Air Force eventually decided to have
 their own operations research groups for wargaming purposes. After WWII,
 mathematician George B. Dantzig developed the linear programming formulation
 for the Air Force to optimize planning costs (Leonid Vitalievich Kantorovich
 from the USSR came up with it earlier although his work wasn’t popular among
-USSR economists) <span class="citation">(<a href="#ref-matlab_2020" role="doc-biblioref">MATLAB 2020</a>)</span>. Operations research become widespread in the US
+USSR economists) <span class="citation">(<a href="#ref-matlab_2020" role="doc-biblioref"><strong>matlab_2020?</strong></a>)</span>. Operations research become widespread in the US
 private sector where over half of US companies used it at some function
-<span class="citation">(<a href="#ref-holsten_1998" role="doc-biblioref">Holsten 1998</a>)</span>.</p>
+<span class="citation">(<a href="#ref-holsten_1998" role="doc-biblioref"><strong>holsten_1998?</strong></a>)</span>.</p>
 </div>
-<div id="references" class="section level2 unnumbered">
+<div id="references" class="section level2">
 <h2>References</h2>
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div id="ref-holsten_1998" class="csl-entry">
-Holsten, William K. 1998. <span>“Operations Research.”</span> <em>Encyclopedia Britannica</em>. Encyclopedia Britannica, inc. <a href="https://www.britannica.com/topic/operations-research">https://www.britannica.com/topic/operations-research</a>.
-</div>
-<div id="ref-matlab_2020" class="csl-entry">
-MATLAB. 2020. <span>“History of Linear Programming.”</span> <em>MATLAB One</em>. MATLAB. <a href="https://matlab1.com/history-linear-programming/">https://matlab1.com/history-linear-programming/</a>.
-</div>
-<div id="ref-theorsocietyuk_2017" class="csl-entry">
-TheORSocietyUK. 2017. <em>YouTube</em>. YouTube. <a href="https://www.youtube.com/watch?v=ILWbaWrjgU4">https://www.youtube.com/watch?v=ILWbaWrjgU4</a>.
-</div>
-</div>
 </div>
