--- a/content/linear-algebra/2.html
+++ b/content/linear-algebra/2.html
@@ -22,8 +22,9 @@ Source: Lumen Learning - College Algebra
 different lights:</p>
 <ul>
 <li>In a <a href="https://www.investopedia.com/terms/j/jic.asp">just in case (JIC)</a>
-situation. For those in the supply chain industry, that inventory management
-strategy might be preferred after what’s going on with these port backlogs.</li>
+situation, that inventory management strategy focuses on keeping some products
+at hand to avoid shortages. With the abundance of shortages nowadays with COVID
+playing a role in port backlogs, this strategy might be preferable at this time.</li>
 <li>In a <a href="https://www.investopedia.com/terms/j/jit.asp">just in time (JIT)</a> situation,
 that inventory management strategy prioritizes removing unnecessary waste and
 increasing efficiency.</li>
