--- a/content/linear-algebra/_index.html
+++ b/content/linear-algebra/_index.html
@@ -45,3 +45,7 @@ algebra towards developing working knowledge. These topics include:</p>
 <li><a href="./4">Orthogonality</a></li>
 <li><a href="./5">Eigenvalues and Eigenvectors</a></li>
 </ul>
+<p>{{% notice note %}}
+In linear algebra, standard notation for representing rows and columns in a vector
+or matrix is m x n respectively.
+{{% /notice %}}</p>
